--- a/covidWeb/src/app/test/test.component.html
+++ b/covidWeb/src/app/test/test.component.html
@@ -2,7 +2,7 @@
 <div class="test-form">
   <mat-card>
     <mat-card-content>
-      <h1>Comprueba si eres o no sospechoso de COVID</h1>
+      <h2>Comprueba si eres o no sospechoso de COVID</h2>
       <form>
         <p><mat-checkbox>¿Tiene Tos?</mat-checkbox></p>
         <p><mat-checkbox>¿Tiene Cefalea?</mat-checkbox></p>
@@ -16,20 +16,19 @@
         <p><mat-checkbox>¿Tiene dolor abdominal?</mat-checkbox></p>
         <p><mat-checkbox>¿Tiene dolor de articulaciones?</mat-checkbox></p>
         <p><mat-checkbox>¿Tiene dolor muscular?</mat-checkbox></p>
-        <p><mat-checkbox>¿Tiene dolor de pechi?</mat-checkbox></p>
+        <p><mat-checkbox>¿Tiene dolor de pecho?</mat-checkbox></p>
         <p><mat-checkbox>¿Otros?</mat-checkbox></p>
-        <mat-label>¿Semanas?</mat-label>
-
-        <mat-form-field>
-          <input matInput placeholder="Semanas">
-        </mat-form-field>
         <button mat-raised-button color="primary"
         >Probar
         </button>
+        <mat-form-field class="example-full-width" appearance="fill">
+          <input matInput disabled value="Diagnostico">
+        </mat-form-field>
 
 
       </form>
     </mat-card-content>
   </mat-card>
 </div>
+
 
