--- a/covidWeb/src/app/historic/historic.component.html
+++ b/covidWeb/src/app/historic/historic.component.html
@@ -1,85 +1,23 @@
 <app-navigation></app-navigation>
 <table mat-table [dataSource]="elements" class="mat-elevation-z8">
+  <section>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.form.tos}} </td>
+    </ng-container>
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="tos">
-    <th mat-header-cell *matHeaderCellDef> ¿Tos? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.tos}} </td>
-  </ng-container>
+    <ng-container matColumnDef="fecha">
+      <th mat-header-cell *matHeaderCellDef> Fecha de Consulta </th>
+      <td mat-cell *matCellDef="let element"> {{element.form.cafelea}} </td>
+    </ng-container>
 
-  <!-- Tos Column -->
-  <ng-container matColumnDef="cefalea">
-    <th mat-header-cell *matHeaderCellDef> ¿Cefalea? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.cafelea}} </td>
-  </ng-container>
+    <ng-container matColumnDef="diagnostico">
+      <th mat-header-cell *matHeaderCellDef> Diagnóstico</th>
+      <td mat-cell *matCellDef="let element"> {{element.form.cong_nasal}} </td>
+    </ng-container>
 
-  <!-- Cefalea Column -->
-  <ng-container matColumnDef="nasal">
-    <th mat-header-cell *matHeaderCellDef> ¿Cong_nasal?</th>
-    <td mat-cell *matCellDef="let element"> {{element.form.cong_nasal}} </td>
-  </ng-container>
 
-  <!-- Cefalea Column -->
-  <ng-container matColumnDef="respiratoria">
-    <th mat-header-cell *matHeaderCellDef> ¿Dif_Respiratoria? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.dif_respiratoria}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Garganta">
-    <th mat-header-cell *matHeaderCellDef> ¿Garganta? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.dolor_garganta}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Fiebre">
-    <th mat-header-cell *matHeaderCellDef> ¿Fiebre? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.fiebre}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Diarrea">
-    <th mat-header-cell *matHeaderCellDef> ¿Diarrea? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.diarrea}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Nauseas">
-    <th mat-header-cell *matHeaderCellDef> ¿Nauseas? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.nauseas}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="nosmia_Hiposmia">
-    <th mat-header-cell *matHeaderCellDef> ¿Anosmia? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.anosmia_hiposmia}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Abdomen">
-    <th mat-header-cell *matHeaderCellDef> ¿Dolor abdominal? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.dolor_abdominal}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Articulaciones">
-    <th mat-header-cell *matHeaderCellDef> ¿Articulaciones? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.dolor_articulaciones}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Muscular">
-    <th mat-header-cell *matHeaderCellDef> ¿Muscular? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.dolor_muscular}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Pecho">
-    <th mat-header-cell *matHeaderCellDef> ¿Dolor en el pecho? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.dolor_pecho}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Otros">
-    <th mat-header-cell *matHeaderCellDef> ¿Otros? </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.otros}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Diagnostico">
-    <th mat-header-cell *matHeaderCellDef> Diagnostico </th>
-    <td mat-cell *matCellDef="let element"> {{element.form.Diagnostic}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </section>
 </table>
