--- a/covidWeb/src/app/historic/historic.component.html
+++ b/covidWeb/src/app/historic/historic.component.html
@@ -1,23 +1,30 @@
 <app-navigation></app-navigation>
-<table mat-table [dataSource]="elements" class="mat-elevation-z8">
-  <section>
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.form.tos}} </td>
-    </ng-container>
+<p>
+  <br>
+  <br>
+</p>
+<mat-card style="width: 60%; margin: auto;">
+  <table mat-table [dataSource]="elements" class="mat-elevation-z8">
+    <section>
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="fecha">
-      <th mat-header-cell *matHeaderCellDef> Fecha de Consulta </th>
-      <td mat-cell *matCellDef="let element"> {{element.form.cafelea}} </td>
-    </ng-container>
+      <ng-container matColumnDef="fecha">
+        <th mat-header-cell *matHeaderCellDef> Fecha de Consulta </th>
+        <td mat-cell *matCellDef="let element"> {{element.created_at}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="diagnostico">
-      <th mat-header-cell *matHeaderCellDef> Diagnóstico</th>
-      <td mat-cell *matCellDef="let element"> {{element.form.cong_nasal}} </td>
-    </ng-container>
+      <ng-container matColumnDef="diagnostico">
+        <th mat-header-cell *matHeaderCellDef> Diagnóstico</th>
+        <td mat-cell *matCellDef="let element"> {{element.diagnostic}} </td>
+      </ng-container>
 
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </section>
-</table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </section>
+  </table>
+</mat-card>
+
